2019-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when formatting 1 / ((0 × 0)(1 / 0)^2)

2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove wide interval messages if final result is within precision
	* Fix options not output for "help set" in qalc
	* Rename "simplify" to "expand", to avoid confusion

2019-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Simplify y*f(x)+z*f(x) to (y+z)*f(x)

2019-04-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for "portable" Windows version

2019-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve currency symbol placement
	* Fix loading of interval arithmetic setting
	* Do not display more than the significant digits with non-decimal bases for intervals
	* Fix display of ending zeroes for approximate integers
	* Do not show fractions for approximate values with show ending zeroes activated
	* Fix display of roman numeral reciprocal
	* Show no item found message when find/search command fails
	* Improvements to polynomial division
	* Never add minus sign to ± value (uncertainty)

2019-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix potential segfault in acosh calculation
	* Add general number interval order check
	* acosh(0)=0.5i*pi, acosh(1)=0, and acosh(x)=acosh(-x)+i*pi when x<=-1
	* atanh(x)=atanh(1/x)-0.5i*pi when x > 1
	* Fix segfault in Number::square(), and possibly Number::recip() with (relatively) extremely small imaginary part

2019-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add optional variable value argument to diff()
	* Hide optional arguments with default value in output
	* Fix integrate(sinc(x),x,0,infinity) and similar (should return pi/2 instead of Si(x))

2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve effeciency and precision, in approximate mode, of diff()
	* Proper interval arithmetic for airy() with arguments >= -1
	* Fix ignore locale on Windows
